antlr/JimpleLang/src/test/resources/cases/number.jmpl.case
println 12.3
<----->
12.3
<----->
println 2/6
<----->
0
<----->
println 6/2
<----->
3
<----->
println 2.0/6
<----->
0.3333333333333333
<----->
println 2/6.0
<----->
0.3333333333333333
<----->
println 12%3
<----->
0
<----->
println 13%3
<----->
1
<----->
println 5%3
<----->
2
<----->
println 5%1
<----->
0
<----->
println 6%0
<----->
!ERROR: / by zero
<----->
println 1+2*3
<----->
7
<----->
println 2*3+5/2
<----->
8
<----->
println 125 < 124
<----->
false
<----->
println 124 < 125
<----->
true
<----->
println 124 < 124
<----->
false
<----->
println 125 <= 124
<----->
false
<----->
println 125 <= 125
<----->
true
<----->
println 124 <= 125
<----->
true
<----->
println 125 == 124
<----->
false
<----->
println 125 == 125
<----->
true
<----->
println 125 != 124
<----->
true
<----->
println 124 != 124
<----->
false
<----->
println 125 > 124
<----->
true
<----->
println 125 > 125
<----->
false
<----->
println 124 > 125
<----->
false
<----->
println 125 >= 124
<----->
true
<----->
println 125 >= 125
<----->
true
<----->
println 124 >= 125
<----->
false
<----->
println (((124)) >= 125)
<----->
false
<----->
println 1/"1"
<----->
ERROR: Operator '/' not supported for such arguments: 'NUMBER' and 'STRING'
println 1/"1"
         ^
<----->
println "1"*2
<----->
ERROR: Operator '*' not supported for such arguments: 'STRING' and 'NUMBER'
println "1"*2
           ^
<----->